media not updating

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
   display: grid;
-  width: 100%;
+  width: 90%;
+  
   height: auto;
-  border: 3px solid black;
-  grid-template-rows: 2fr 0.25fr 2.5fr 1fr 0.5fr;
-  grid-template-columns: 2fr 4fr;
+  grid-template-rows: 1fr 0.25fr 2.5fr .75fr 0.35fr;
+  grid-template-columns: 1.5fr 4fr;
   font-family: "Poppins", sans-serif;
+  margin: 0 auto;
 }
 
 .flex {
@@ -21,12 +22,12 @@ a {
 }
 
 a:hover {
-  color: white;
+  color: red;
 }
 
 h1 {
   width: 100%;
-  font-size: 4rem;
+  font-size: 6rem;
   text-align: center;
   color: white;
   font-family: "Great Vibes", cursive;
@@ -36,17 +37,17 @@ h1 {
 h2 {
   text-align: center;
 }
-
+/*----------------HEADER--------------------*/
 header {
-  background-image: url(./images/spokane_river_sunset_1440.jpg);
-  background-size: 100% ;
- 
- 
+  background-image: url(./images/home_768.jpg);
+  background-size: cover;
+  max-height: 800px;
+
   flex-direction: column;
   border: 1px solid black;
   grid-row: 1;
   grid-column: 1/5;
- 
+
   align-items: center;
 }
 
@@ -67,9 +68,9 @@ nav {
   width: 75%;
 
   align-items: center;
-  column-gap: 10%;
+  column-gap: 2%;
 }
-/*----------------------*/
+/*------------------------ROW 2--------------------------*/
 .sub_heading {
   display: flex;
   background-color: black;
@@ -83,37 +84,43 @@ nav {
   color: white;
 }
 
+/*-----------------ASIDE---------------*/
 aside {
-    flex-direction: column;
-  border: 3px solid black;
+  flex-direction: column;
   grid-row: 3/4;
   grid-column: 1/2;
 }
 
 .house {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
 }
 
 .house p {
-    font-size: .75rem;
+  font-size: 0.75rem;
 }
 
 .house img {
-  
-    width: 300px;
+  width: 300px;
 }
 
+/*-----------------------MAIN--------------*/
 main {
-  border: 5px solid black;
   grid-row: 3/4;
   grid-column: 2/5;
 }
+
+.about {
+  flex-direction: column;
+  padding: 2rem;
+  justify-content: center;
+}
+
 .about_head {
-    width: 100%;
-    flex-direction: row;
- 
+  width: 100%;
+  flex-direction: row;
 }
 
 .about_head img {
@@ -121,39 +128,37 @@ main {
   height: 200px;
 }
 
-.about {
-  flex-direction: column;
-  padding: 0;
 
-}
 
 .main_title {
-    width: 50%;
-    padding: 0;
-    justify-content: center;
+  width: 75%;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
 }
 .main_title img {
-    height: 4rem;
-    margin-left: 2rem;
-    align-self: center;
+  height: 4rem;
+  margin-left: 2rem;
+  align-self: center;
 }
 .main_title h2 {
-  font-size: 4rem;
+  font-size: 3rem;
   font-family: "Great Vibes", cursive;
   margin-right: 2rem;
-  
 }
 
 .about h4 {
-    margin: 0;
+  margin: 0;
 }
 .about p {
   font-size: 1rem;
 }
 
-.container1 {
+/*-----------------------LOCAL--------------------*/
+.local {
   grid-row: 4;
   grid-column: 1/5;
+  border-top: 1px solid black;
 }
 
 .item1 h1 {
@@ -161,6 +166,7 @@ main {
   color: black;
   margin-bottom: 25px;
   margin-top: 0;
+  font-size: 4rem;
 }
 
 .item1 img {
@@ -171,10 +177,9 @@ main {
   padding: 50px;
   margin-top: 3.5rem;
 }
-/*------------------*/
+/*---------------------FOOTER-----------------*/
 footer {
   background-color: black;
-  border: 1px dotted gray;
   justify-content: space-around;
   align-items: center;
   grid-row: 5;
@@ -229,3 +234,37 @@ footer {
   height: 40px;
   width: 40px;
 }
+/*-----------------------END OF DESKTOP-----------*/
+@media  (max-width: 1200) {
+  .flex {
+    padding: 1rem;
+  }
+  a {
+    font-size: .75rem;
+  }
+.banner {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.banner img {
+  height: 50px;
+}
+
+}
+
+/*---------------------------TABLET----------------*/
+@media (max-width: 769) {
+  .banner {
+    flex-direction: column;
+  }
+  .banner img {
+    height: 50px;
+    width: auto;
+  }
+  nav {
+    width: 100%;
+  }
+}
+
+/*---------------------------MOBILE----------------*/
