--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+:root {
+  font-size: 16px;
+}
+
 body {
   display: grid;
-  width: 90%;
+  max-width: 95%;
   
   height: auto;
-  grid-template-rows: 1fr 0.25fr 2.5fr .75fr 0.35fr;
-  grid-template-columns: 1.5fr 4fr;
+  grid-template-rows: auto;
+  grid-template-columns: 2fr 5fr;
   font-family: "Poppins", sans-serif;
   margin: 0 auto;
 }
@@ -35,7 +39,16 @@ h1 {
 }
 
 h2 {
+  display: flex;
+  font-size: 4rem;
+  font-family: "Great Vibes", cursive;
   text-align: center;
+}
+
+h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5rem;
+  color: white;
 }
 /*----------------HEADER--------------------*/
 header {
@@ -52,7 +65,9 @@ header {
 }
 
 .banner {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
   align-items: center;
   justify-content: space-around;
 }
@@ -66,21 +81,20 @@ header {
 nav {
   display: flex;
   width: 75%;
-
+ justify-content: space-around;
   align-items: center;
   column-gap: 2%;
 }
 /*------------------------ROW 2--------------------------*/
 .sub_heading {
-  display: flex;
   background-color: black;
   grid-row: 2;
   grid-column: 1/5;
   justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
-.sub_heading h2 {
+.sub_heading h3 {
   color: white;
 }
 
@@ -124,8 +138,8 @@ main {
 }
 
 .about_head img {
-  width: 200px;
-  height: 200px;
+  width: 12.5rem;
+  height: 12.5rem;
 }
 
 
@@ -159,8 +173,13 @@ main {
   grid-row: 4;
   grid-column: 1/5;
   border-top: 1px solid black;
+  display: flex;
+  flex-direction: column;
 }
 
+.item1 {
+  flex-direction: column;
+}
 .item1 h1 {
   font-family: "Great Vibes", cursive;
   color: black;
@@ -198,7 +217,7 @@ footer {
 }
 
 .logo img {
-  height: 50px;
+  height: 4rem;
   width: auto;
 }
 
@@ -231,16 +250,23 @@ footer {
 }
 
 .social-icon img {
-  height: 40px;
-  width: 40px;
+  height: 2rem;
+  width: auto;
 }
 /*-----------------------END OF DESKTOP-----------*/
-@media  (max-width: 1200) {
+@media  (max-width: 1200px) {
+  body {
+    grid-template-columns: 1;
+  }
   .flex {
     padding: 1rem;
+    margin: 0 auto;
+  }
+  header {
+   width: 100%;
   }
   a {
-    font-size: .75rem;
+    font-size: 1.5rem;
   }
 .banner {
   flex-direction: column;
@@ -248,24 +274,103 @@ footer {
   align-items: center;
 }
 .banner img {
-  height: 50px;
+  height: 4rem;
   width: auto;
 }
+.sub_heading {
+  width: 100%;
+}
 
+aside {
+  grid-row: 3/4;
+  flex-direction: column;
+}
+aside h2 {
+  margin: 0 auto
+}
+.listings {
+  flex-direction: row;
+}
+main {
+  grid-row: 4/5;
+  grid-column: 1;
+}
+.local {
+  grid-row: 5/6;
+  min-width: 100%;
+  flex-direction: column;
+  justify-content: center;
+}
+.item1 {
+  justify-content: center;
+  flex-direction: column;
+}
+.item2 p  {
+  padding: 0 50px;
+} 
+footer {
+  grid-row: 6/7;
+  width: 100%;
+  justify-content: space-around;
+}
+.footer-links {
+  flex-direction: column;
+}
+.logo {
+  margin: 0 2rem;
+}
+.social-media {
+  margin: 2rem;
+}
 }
 
 /*---------------------------TABLET----------------*/
-@media (max-width: 769) {
+@media (max-width: 769px) {
+  header {
+    max-height: 750px;
+    min-width: 100%;
+    margin: 0 auto;
+  }
   .banner {
-    flex-direction: column;
+    width: 20%;
+    background-color: black;
+    justify-content: flex-start;
+    margin: 1rem;
+    text-align: center;
   }
   .banner img {
     height: 50px;
     width: auto;
   }
   nav {
+    flex-direction: column;
     width: 100%;
   }
+  h1 {
+    margin: 0 auto;
+    font-size: 4rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+  .listings {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  footer {
+    flex-direction: column;
+  }
+  .footer-links a {
+    margin: 0 auto;
+    padding: 1rem;
+  }
+  .social-media {
+    margin: 1rem;
+  }
+  .social-media h4 {
+    font-size: 1rem;
+  }
+ 
 }
 
-/*---------------------------MOBILE----------------*/
+
