--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   
   height: auto;
   grid-template-rows: auto;
-  grid-template-columns: 2fr 5fr;
+  grid-template-columns: 1fr 5fr;
   font-family: "Poppins", sans-serif;
   margin: 0 auto;
 }
@@ -102,9 +102,13 @@ nav {
 aside {
   flex-direction: column;
   grid-row: 3/4;
-  grid-column: 1/2;
+  grid-column: 1;
 }
 
+.listings {
+  display: flex;
+  flex-direction: column;
+}
 .house {
   flex-direction: column;
   justify-content: center;
